Fix (bug 29307) Line-height in <pre> is too narrow, edges overlap in some environments

--- a/skins/vector/screen.css
+++ b/skins/vector/screen.css
@@ -793,7 +793,7 @@ pre {
 	border: 1px solid #EBEBEB;
 	color: black;
 	background-color: #F7F7F7;
-	line-height: 1.1em;
+	line-height: 1.3em;
 }
 ul {
 	line-height: 1.5em;
